finished setting up devise include login links in application.html.erb; created views for users; created user controller for profile pg

--- a/FirstProject/app/views/layouts/application.html.erb
+++ b/FirstProject/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FirstProject</title>
+  <title>CuteRoulette</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+<h1>CuteRoulette!</h1>
+
+<% if user_signed_in? %>
+  <%= link_to current_user.email, user_path(current_user)  %>
+  <%= link_to "sign out", destroy_user_session_path %>
+<% else %>
+  <%= link_to "sign in", new_user_session_path %> | <%= link_to "sign up", new_user_registration_path %>
+<% end %>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
 
 <%= yield %>
