--- a/FirstProject/app/views/layouts/application.html.erb
+++ b/FirstProject/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <% if user_signed_in? %>
   <%= link_to current_user.email, user_path(current_user)  %>
-  <%= link_to "sign out", destroy_user_session_path %>
+  <%= link_to "sign out", destroy_user_session_path, :method => :delete %>
 <% else %>
   <%= link_to "sign in", new_user_session_path %> | <%= link_to "sign up", new_user_registration_path %>
 <% end %>
