fixed forms so they would save to db

--- a/FirstProject/app/views/layouts/application.html.erb
+++ b/FirstProject/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to current_user.email, user_path(current_user)  %></li>
+      <li><%= link_to "signed in as #{current_user.email}", user_path(current_user)  %></li>
       <li><%= link_to "sign out", destroy_user_session_path, :method => :delete %></li>
     </ul>
   <% else %>
