--- a/FirstProject/app/views/pictures/show.html.erb
+++ b/FirstProject/app/views/pictures/show.html.erb
@@ -1,2 +1,11 @@
-<h2>show page</h2>
-unclear if i need this
+<div class="page-header">
+  <h2>show page</h2>
+
+</div>
+
+
+<img src="">
+<p>save to cutecache</p>
+<p>next</p>
+<p>tags</p>
+
