--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,9 @@
     </ul>
   <% else %>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "sign in", new_user_session_path %></li>
-      <li><%= link_to "sign up", new_user_registration_path %></li>
+      <li><%= link_to "Sign In", new_user_session_path %></li>
+      <li><%= link_to "Create Acct", new_user_registration_path %></li>
+      <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
     </ul>
   <% end %>
 </nav>
