index is looking better but I broke facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CuteRoulette</title>
+  <title>GifWallet</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
 
-  <h1><a class="navbar-brand" href="/pictures">CuteRoulette!</a></h1>
+  <h1><a class="navbar-brand" href="/pictures">GifWallet!</a></h1>
 
   <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
