--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -2,10 +2,10 @@
 
 <div class="container">
   <p>
-  <%= f.label "Tag": %>
+  <%= f.label "enter a tag" %>
   <%= f.text_field :tag_name %>
   <p>
-  <%= f.hidden_field :tag_id %>
+  <%= f.hidden_field :picture_id %>
   <%= f.hidden_field :user_id %>
 
   <%= f.submit "save"%>
