some styling stuff but mostly unsuccessful rendering of things

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,14 @@
-* {
+nav {
   padding: 5px;
+}
+
+body {
+  font-family: Georgia, Times, serif;
+  padding: 5px;
+  background:#FAFAFA;
+}
+
+
+td {
+    word-wrap:break-word;
 }
