--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
 
-  <h1><a class="navbar-brand" href="/pictures">GifWallet!</a></h1>
+  <a class="navbar-brand" href="/pictures">GifWallet!</a>
 
   <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
