--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,12 +1,10 @@
 <%= form_for @picture do |f| %>
 
-<div class="container">
-  <p>
-  <%= f.label "Picture URL:" %>
-  <%= f.text_field :url %>
-  <p>
-  <%= f.hidden_field :user_id %>
+  <div class="form-group">
+    <%= f.label "Picture URL:" %>
+    <%= f.text_field :url %>
+  </div>
+    <%= f.hidden_field :user_id %>
 
   <%= f.submit "save" %>
   <% end %>
-</div>
