--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,8 +1,9 @@
 <h2>Edit</h2>
 
+<div class="container">
 <%= render 'form' %>
+</div>
 
-<%= render 'tags/form' %>
 
 <p>
 <%= link_to 'Delete this', method: :delete, data: {confirm: 'Are you sure?'} %>
