--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,17 +1,16 @@
-<div class="page-header">
-  <h2><%= current_user.email %>'s GifWallet!</h2>
+<div>
+  <h3><%= current_user.email %>'s GifWallet!</h3>
 </div>
 
 <p>
 <%= link_to "Add a new gif", new_picture_path %>
 </p>
 
-  <table>
+  <table class="table table-hover table-condensed">
     <thead>
       <tr>
-        <th>id</th>
-        <th>url</th>
         <th>pic</th>
+        <th>url</th>
         <th>edit</th>
         <th>tags</th>
       </tr>
@@ -21,9 +20,8 @@
       <% if picture.user_id == current_user.id %>
         <% image = "<img src=\"#{picture.url}\">" %>
           <tr>
-            <td><%= picture.id %></td>
+            <td><a href="<%= picture_path(picture.id) %>"><img src="<%= picture.url %>" class="img-thumbnail" width= 100px></a></td>
             <td><%= link_to picture.url, picture.url %></td>
-            <td><a href="<%= picture.url %>"><img src="<%= picture.url %>" width= 100px></a></td>
             <td><%= link_to "edit", edit_picture_path(picture) if user_signed_in? %></td>
             <td> tags </td>
           </tr>
@@ -31,4 +29,6 @@
       <% end %>
     </tbody>
   </table>
+
+
 
