--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
 
   <a class="navbar-brand" href="/pictures">GifWallet!</a>
 
+  <ul class="nav navbar-nav navbar-left">
+    <li><a href="#">Library</a></li>
+    <li><%= link_to "Roulette", random_page_path %></li>
+  </ul>
+
+
   <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "signed in as #{current_user.email}", user_path(current_user)  %></li>
