changed around views for pictures/index and users/show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
 
 <nav class="navbar navbar-default" role="navigation">
 
-  <a class="navbar-brand" href="/pictures">GifWallet!</a>
+  <a class="navbar-brand" href="/">GifWallet!</a>
 
   <ul class="nav navbar-nav navbar-left">
-    <li><a href="#">Library</a></li>
+    <li><%= link_to "Library", pictures_path %></li>
     <li><%= link_to "Roulette", random_page_path %></li>
   </ul>
 
