--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,31 +1,20 @@
 <div>
-  <h3><%= current_user.email %>'s GifWallet!</h3>
+  <h3>library of all gifs</h3>
 </div>
 
 <p>
 <%= link_to "Add a new gif", new_picture_path %>
 </p>
 
-  <table class="table table-hover table-condensed">
-    <thead>
-      <tr>
-        <th>pic</th>
-        <th>url</th>
-        <th>edit</th>
-        <th>tags</th>
-      </tr>
-    </thead>
+  <table class="table">
     <tbody>
       <% @pictures.each do |picture| %>
-      <% if picture.user_id == current_user.id %>
         <% image = "<img src=\"#{picture.url}\">" %>
-          <tr>
-            <td><a href="<%= picture_path(picture.id) %>"><img src="<%= picture.url %>" class="img-thumbnail" width= 100px></a></td>
-            <td><%= link_to picture.url, picture.url %></td>
-            <td><%= link_to "edit", edit_picture_path(picture) if user_signed_in? %></td>
-            <td> tags </td>
-          </tr>
-        <% end %>
+          <td>
+            from: <%= picture.user.email %>
+            <a href="<%= picture_path(picture.user.id) %>"><img src="<%= picture.url %>" class="img-thumbnail" width= 100px></a>
+          </td>
+
       <% end %>
     </tbody>
   </table>
