fixed devise params so that name field would save

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -11,7 +11,7 @@
       <% @pictures.each do |picture| %>
         <% image = "<img src=\"#{picture.url}\">" %>
           <td>
-            from: <%= picture.user.email %>
+            from: <%= picture.user.email %><br />
             <a href="<%= picture_path(picture.user.id) %>"><img src="<%= picture.url %>" class="img-thumbnail" width= 100px></a>
           </td>
 
