--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,4 @@
     </tbody>
   </table>
 
-  <%= @user.email %>
-
-
+<%= link_to "edit user reg", edit_user_registration_path if self.current_user == @user %>
