--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
-<h3><%= @user.email %>'s GifWallet</h3>
+<h3><%= @user.name %>'s GifWallet</h3>
 
-  <table class="table table-hover table-condensed">
+  <table class="table table-hover table-condensed table-responsive">
     <thead>
       <tr>
         <th>pic</th>
