added js files for bootstrap to fix dropdown

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,6 @@
  *= require_tree .
  *= require_self
  *= require bootstrap
+ *= app/assets/stylesheets/custom.css
 
  */
-assets/stylesheets/custom.css
