--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,16 @@
 
   <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "signed in as #{current_user.email}", user_path(current_user)  %></li>
-      <li><%= link_to "sign out", destroy_user_session_path, :method => :delete %></li>
+      <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            signed in as <%= current_user.email %>
+            <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "profile", user_path(current_user)  %></li>
+              <li><%= link_to "edit user", edit_user_registration_path %></li>
+              <li><%= link_to "sign out", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+        </li>
     </ul>
   <% else %>
     <ul class="nav navbar-nav navbar-right">
