--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,11 @@
 <h3><%= @user.name %>'s GifWallet</h3>
 
+<p>
+<% if self.current_user == @user %>
+<%= link_to "Add a new gif", new_picture_path %>
+<% end %>
+</p>
+
   <table class="table table-hover table-condensed table-responsive">
     <thead>
       <tr>
