added welcome page and tweaked methods, created roulette page and got json kinda working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <ul class="nav navbar-nav navbar-left">
     <li><%= link_to "Library", pictures_path %></li>
-    <li><%= link_to "Roulette", random_page_path %></li>
+    <li><%= link_to "Roulette", roulette_page_path %></li>
   </ul>
 
 
