--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -8,3 +8,8 @@
 <p>
 <%= link_to 'Delete this', method: :delete, data: {confirm: 'Are you sure?'} %>
 </p>
+
+
+<p>
+<%= button_to "delete", @picture, method: :delete %>
+</p>
