--- a/app/views/pages/roulette.html.erb
+++ b/app/views/pages/roulette.html.erb
@@ -11,13 +11,10 @@
   </select>
   </p>
 
-  <ul>
-    <% aww_data = HTTParty.get("http://www.reddit.com/r/aww/hot/.json?limit=50") %>
-    <% links_list = aww_data["data"]["children"].map { |id| id["data"]["url"] } %>
 
-      <img src="<%= links_list.sample %>" width=400px></li>
+  <img src="<%= @links_list.sample %>" width=400px>
 
-  </ul>
+
 
 
 </div>
