--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,12 +1,10 @@
-<div>
-  <h3>library of all gifs</h3>
-</div>
+<h3>library of all gifs</h3>
 
   <ul>
       <% @pictures.each do |picture| %>
-        <% image = "<img src=\"#{picture.url}\">" %>
+        <img src="<% picture.url %>">
           <li class="img-thumbnail thumbnail-caption">
-            <a href="<%= picture_path(picture.user.id) %>"><img class= "thumbs-lib" src="<%= picture.url %>"></a><br />
+            <a href="<%= picture_path(picture.id) %>"><img class= "thumbs-lib" src="<%= picture.url %>"></a><br />
             by: <%= link_to picture.user.name, user_path(picture.user) %>
           </li>
       <% end %>
