--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -11,3 +11,17 @@
 
 <%= link_to "back to library", pictures_path %>
 
+
+<%= form_for @picture.tag do |f| %>
+
+<div class="container">
+  <p>
+  <%= f.label "enter a tag" %>
+  <%= f.text_field :tag_name %>
+  <p>
+  <%= f.hidden_field :picture_id %>
+  <%= f.hidden_field :user_id %>
+
+  <%= f.submit "save"%>
+  <% end %>
+</div>
