--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
           <tr>
             <td><a href="<%= picture_path(picture.id) %>"><img src="<%= picture.url %>" class="img-thumbnail thumbs-lib"></a></td>
             <td><%= link_to picture.url, picture.url %></td>
-            <td><%= link_to "get gfycat", picture.url %></td>
+            <td><%= link_to "get gfycat", picture.gfycat_convert %></td>
             <td><%= link_to "edit", edit_picture_path(picture) if self.current_user == @user %></td>
             <td> tags </td>
           </tr>
