--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,12 +23,21 @@
         <% image = "<img src=\"#{picture.url}\">" %>
           <tr>
             <td><a href="<%= picture_path(picture.id) %>"><img src="<%= picture.url %>" class="img-thumbnail thumbs-lib"></a></td>
-            <td><%= link_to picture.url, picture.url %></td>
+            <td id="fe_text"><%= link_to picture.url, picture.url %></td>
             <td>
-              <button id="copy-button" data-clipboard-text=<%= picture.url %> title="Click to copy me.">Copy to Clipboard</button>
-              <script src="ZeroClipboard.js"></script>
-              <script src="main.js"></script>
+              <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='Default clipboard text from attribute' id='d_clip_button' title='Click me to copy to clipboard.'>
+                <b>Copy to clipboard</b>
+              </button>
+              <script>
+                $(document).ready(function() {
+                  var clip = new ZeroClipboard($("#d_clip_button"))
+                });
 
+                $("#clear-test").on("click", function(){
+                  $("#fe_text").val("Copy me!");
+                  $("#testarea").val("");
+                });
+              </script>
             </td>
 
             <td><%= link_to "get gfycat", picture %></td>
