--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
   <a class="navbar-brand" href="/">GifWallet!</a>
 
   <ul class="nav navbar-nav navbar-left">
-    <li><%= link_to "Library", pictures_path %></li>
+
+    <li><%= link_to "MyWallet", pictures_path if user_signed_in?%></li>
     <li><%= link_to "Roulette", roulette_page_path %></li>
   </ul>
-
 
   <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
@@ -26,7 +26,7 @@
             signed in as <%= current_user.email %>
             <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "profile", user_path(current_user)  %></li>
+              <li><%= link_to "profile", user_path(current_user) %></li>
               <li><%= link_to "edit user", edit_user_registration_path %></li>
               <li><%= link_to "sign out", destroy_user_session_path, :method => :delete %></li>
             </ul>
