added fix to roulette logic; added gfy_convert method to pictures model but things are not doing what they need to be doing

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,9 @@
-<h3>library of all gifs</h3>
+<div class="container">
+<h3>GifWallet allows you to collect cool images from across the web and easily refer back to them in forums and texts</h3>
+
+<p>
+  Irony chillwave you probably haven't heard of them, master cleanse paleo pickled Truffaut small batch McSweeney's photo booth. Health goth tilde Bushwick taxidermy Pinterest. Hella Echo Park Thundercats Godard roof party flannel, fanny pack meh photo booth sustainable tofu.
+</p>
 
   <ul>
       <% @pictures.each do |picture| %>
@@ -10,5 +15,6 @@
       <% end %>
   </ul>
 
+</div>
 
 
