--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <ul class="nav navbar-nav navbar-left">
 
-    <li><%= link_to "MyWallet", pictures_path if user_signed_in?%></li>
+    <li><%= link_to "MyWallet", user_path(current_user) if user_signed_in?%></li>
     <li><%= link_to "Roulette", roulette_page_path %></li>
   </ul>
 
