--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h3><%= @user.name %>'s GifWallet</h3>
 
 <p>
@@ -11,6 +12,7 @@
       <tr>
         <th>pic</th>
         <th>url</th>
+        <th></th>
         <th></th>
         <th></th>
         <th></th>
@@ -42,9 +44,12 @@
 
             <td><%= link_to "get gfycat", picture %></td>
             <td><%= link_to "edit", edit_picture_path(picture) if self.current_user == @user %></td>
+            <td><%= button_to "delete this", @picture, method: :delete  if self.current_user == @user %></td>
             <td> tags </td>
           </tr>
         <% end %>
       <% end %>
     </tbody>
   </table>
+
+</div>
