--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h2>Edit</h2>
 
 <div class="container">
@@ -7,3 +9,4 @@
 <p>
 <%= button_to "delete this", @picture, method: :delete %>
 </p>
+</div>
