not embedding html5 videos because javascript

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -6,14 +6,13 @@
 
 body {
   padding: 5px;
-  background-image: url("ps_neutral.png");
+  background-image: url("assets/images/ps_neutral.png");
 }
 
 
 nav {
   padding: 5px;
 }
-
 
 
 
