--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -9,21 +9,54 @@ body {
   background-image: url("assets/images/ps_neutral.png");
 }
 
+a {
+  color: #63B5E8;
+}
+
 
 nav {
   padding: 5px;
 }
 
+.navbar-default {
+  background-color: #797EFF;
+  border-color: #e7e7e7;
+}
 
 
 td {
   word-wrap:break-word;
 }
 
+
+
+.navbar-default .navbar-brand {
+  color: #FFFFFF;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #5e5e5e;
+
+}
+.navbar-default .navbar-text {
+  color: #FFFFFF;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #FFFFFF;
+}
+
+
+
 .thumbnail-caption {
   font-size: 10px;
 }
 
 .thumbs-lib {
+  height: 150px;
+}
+
+.thumbs-wallet {
   width: 100px;
 }
+
+
