--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,6 @@
         <th></th>
         <th></th>
         <th></th>
-        <th></th>
         <th>tags</th>
       </tr>
     </thead>
@@ -24,8 +23,9 @@
       <% if picture.user_id ==  @user.id %>
         <% image = "<img src=\"#{picture.url}\">" %>
           <tr>
-            <td><a href="<%= picture_path(picture.id) %>"><img src="<%= picture.url %>" class="img-thumbnail thumbs-lib"></a></td>
+            <td><a href="<%= picture_path(picture.id) %>"><img src="<%= picture.url %>" class="img-thumbnail thumbs-wallet"></a></td>
             <td id="fe_text"><%= link_to picture.url, picture.url %></td>
+
             <td>
               <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='Default clipboard text from attribute' id='d_clip_button' title='Click me to copy to clipboard.'>
                 <b>Copy to clipboard</b>
@@ -43,7 +43,7 @@
             </td>
 
             <td><%= link_to "get gfycat", picture.gfy_url %></td>
-            <td><%= link_to "edit", edit_picture_path(picture) if self.current_user == @user %></td>
+
             <td><%= button_to "delete this", @picture, method: :delete  if self.current_user == @user %></td>
             <td> tags </td>
           </tr>
