--- a/app/views/pages/roulette.html.erb
+++ b/app/views/pages/roulette.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <h3> roulette!</h3>
+  <h3> GifRoulette!</h3>
 
-  <p><%= link_to 'Hit me', roulette_page_path %></p>
+  <p><strong><%= link_to 'Hit me', roulette_page_path %></strong></p>
 
 
   <img src="<%= @links_list.sample %>" width=400px>
