--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,9 +1,7 @@
 <div class="container">
-<h3>GifWallet allows you to collect cool images from across the web and easily refer back to them in forums and texts</h3>
+<h2 class="text-center">GifWallet! allows you to collect cool gifs from across the internets and save their links for easy access to posting in forums.</h2>
 
-<p>
-  Irony chillwave you probably haven't heard of them, master cleanse paleo pickled Truffaut small batch McSweeney's photo booth. Health goth tilde Bushwick taxidermy Pinterest. Hella Echo Park Thundercats Godard roof party flannel, fanny pack meh photo booth sustainable tofu.
-</p>
+<br />
 
   <ul>
       <% @pictures.each do |picture| %>
