--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h3><%= @user.name %>'s GifWallet</h3>
+<h3><%= @user.name.capitalize %>'s GifWallet</h3>
 
 <p>
 <% if self.current_user == @user %>
