--- a/app/views/pages/roulette.html.erb
+++ b/app/views/pages/roulette.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
   <h3> GifRoulette!</h3>
 
-  <p><strong><%= link_to 'Hit me', roulette_page_path %></strong></p>
+  <p><strong><%= link_to 'Spin again!', roulette_page_path %></strong></p>
 
-
-  <img src="<%= @links_list.sample %>" width=400px>
+  <img src="<%= @links_list.sample %>" class="img-rounded" width=400px>
 
 
 </div>
