--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -6,5 +6,5 @@
   </div>
     <%= f.hidden_field :user_id %>
 
-  <%= f.submit "save" %>
+  <%= f.submit "save", class: "btn btn-default" %>
   <% end %>
