--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,14 +28,14 @@
             </td>
             <td>
               <% picture.tags.each do |tag| %>
-              <%= tag.tag_name %>,
+              #<%= link_to tag.tag_name, tag %>
               <% end %>
             </td>
             <td id="fe_text">
               <%= link_to "gif permalink", picture.url %>
             </td>
             <td>
-              <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='Default clipboard text from attribute' id='d_clip_button' title='Click me to copy to clipboard.'>
+              <button class='btn btn-default my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='Default clipboard text from attribute' id='d_clip_button' title='Click me to copy to clipboard.'>
                 <b>Copy to clipboard</b>
               </button>
               <script>
