--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -5,7 +5,7 @@
   </p>
 
   <p>
-  <strong>Added by:</strong> <%= link_to @picture.user.name, user_path(@picture.user) %>
+  <strong>Added by:</strong> <%= link_to @picture.user_name, user_path(@picture.user) %>
   </p>
 
   <p>
